[project]
name = "mflux-comfyui"
version = "2.0.0"
description = "Mflux integration for ComfyUI"
license = { file = "LICENSE" }
dependencies = ["mflux==0.10.0"]

[project.urls]
Repository = "https://github.com/joonsoome/Mflux-ComfyUI"

[tool.comfy]
PublisherId = "joonsoome"
DisplayName = "Mflux-ComfyUI"
Icon = "assets/icon.svg"
